[gd_scene load_steps=2 format=3 uid="uid://cgmo1eicequd0"]

[ext_resource type="Script" uid="uid://oxwrdoshvxkk" path="res://scripts/generation_ui.gd" id="1_0bdr6"]

[node name="GenerationUI" type="CanvasLayer"]
script = ExtResource("1_0bdr6")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.5
offset_right = 58.5
offset_bottom = 86.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Generate" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Generate"

[node name="Reset" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load"

[connection signal="button_up" from="MarginContainer/VBoxContainer/Generate" to="." method="_on_generate_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Reset" to="." method="_on_reset_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Save" to="." method="_on_save_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Load" to="." method="_on_load_button_up"]
